--- a/src/navbar/NavLink.module.css
+++ b/src/navbar/NavLink.module.css
@@ -1,35 +1,45 @@
 .options {
     line-height: 4;
-    margin:1.5em;
-    position: relative;
-    color: #131313    ;
+    margin:0 1.5em;
+    height: 36px;
+    font-size: 12px;
+    color: #131313;
     font-weight: bold;
     font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+    color: black;
+    position: relative;
+    padding: 5px 0;
 }
 .options:before {
-    position: absolute;
-    bottom: 0;
     content: "";
-    display: block;
-    width: 0;
-    height: 3px;
-    background-color: #fff;
-    transition: all .3s;
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #131313;
+  transform: scale(0);
+  transform-origin: left;
+  transition: all .3s;
 }
-.options:hover {
-    color: #fff;
-    font-weight: bold;
+.options:hover::before,
+.options:hover::after {
+    transform: scale(1);
 }
 .isactive {
     color: #131313;
     font-weight: bold;
 }
-.options:hover::before {
-    width: 100%;  
-}
-.options::before {
-    left: 50%;
-}
-.options:hover::before{
+.options:after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    bottom: 0;
     left: 0;
-}
+    background-color: #131313;
+    transform: scale(0);
+    transform-origin: right;
+    transition: all .3s;
+  }
