--- a/src/panel/Panel.module.css
+++ b/src/panel/Panel.module.css
@@ -1,5 +1,5 @@
 .titleBox {
-    margin-top: 120px;
+    margin-top: 100px;
 }
 .title {
     font-size: 64px;
@@ -19,3 +19,67 @@
     font-weight: 700;
     font-style: normal;
 }
+
+.equipos {
+    display: flex;
+}
+
+.card {
+    background-color: #fff;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    border: 1px solid green;
+    position: relative;
+    width: 502px;
+    height: 765px;
+    margin: 30px;
+}
+
+.cardDetails{
+    border: 1px solid black;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: #262626;;
+    height: 228px;
+}
+.titleEquipo, 
+.titleEstado,
+.textTiempoTrans {
+    font-family: "Roboto";
+    color: #fff;
+    text-align: start;
+    padding-left: 39px;
+}
+.titleEquipo {
+    font-size: 20px;
+}
+.titleEstado {
+    font-size: 32px;
+    font-weight: 300;
+    margin-bottom: 0;
+    margin-top: 0;
+}
+.textTiempoTrans {
+    color: #eee;
+    font-size: 16px;
+}
+.buttonArrow {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-right: 35px;
+    font-size: 15px;
+    font-weight: 700px;
+    letter-spacing: 2.6px;
+    text-decoration: none;
+}
+
+.buttonCocina {
+    color: #EF8225;
+}
+.buttonEndriador {
+    color: #33A7FD;
+}
+
