--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  text-align: center;
 }
 .icn {
   width: 30px;
@@ -10,6 +7,7 @@
   color: #000;
 }
 body{
-  padding-left: 116px;
-  padding-right: 116px;
+  
+}
+footer {
 }
