PanelContol: Graficos en tiempo real

--- a/src/footer/Footer.module.css
+++ b/src/footer/Footer.module.css
@@ -135,3 +135,11 @@ img {
     margin: 0;
     padding: 10px;
 }
+
+.testing {
+    color: black;
+  color:#2962FF;
+  color:white;
+  color:#2962FF;
+  color: rgba(41, 98, 255, 0.28);
+}
