--- a/src/test/Component.module.css
+++ b/src/test/Component.module.css
@@ -3,6 +3,7 @@
     width: 200px;
     height: 110px;
     position: relative;
+    border: 1px solid green;
 }
 .titleDataTime {
     display: flex;
@@ -19,6 +20,7 @@
     line-height: normal;
     margin-left: 6px;
     top: 10px;
+    z-index: 9;
 }
 .boxImagen {
     width: 19px;
@@ -43,7 +45,7 @@
     margin-left:6px;
     width: 97px;
     height: 24px;
-    
+    z-index: 99;
 }
 .tipoData {
     color: #D9D9D9;
