--- a/src/panel-control/PanelControl.module.css
+++ b/src/panel-control/PanelControl.module.css
@@ -82,7 +82,7 @@ main {
 
 .dataTime {
     border: 1px solid red;
-    background: #0B0B0B;
+    background: #131313;
     border-radius: 15px;
     padding: 22px;
 }
