--- a/src/Components/sensores/SensorChart.module.css
+++ b/src/Components/sensores/SensorChart.module.css
@@ -1,8 +1,9 @@
-.dataTimeLive {
+.dataTime {
     background: #0B0B0B;
     width: 200px;
-    height: 75px;
+    height: 110px;
     position: relative;
+    border: 1px solid green;
 }
 .titleDataTime {
     display: flex;
@@ -24,13 +25,17 @@
 .boxImagen {
     width: 19px;
     height: 16px;
+    border: 1px solid white;
     margin-right: 6px;
     top: 10px;
 }
 .Imagen {
     width: 100%;
 }
-.valorDato {
+.dataComponent {
+    position: absolute;
+    top: 32px;
+    color: #EF8225;
     font-family: Roboto;
     font-size: 22px;
     font-style: normal;
@@ -40,15 +45,8 @@
     margin-left:6px;
     width: 97px;
     height: 24px;
+    z-index: 99;
 }
-.ValorDatoInactive {
-    color: #8C8C8C;
-}
-
-.ValorDatoActive {
-    color: #33A7FD;
-}
-
 .tipoData {
     color: #D9D9D9;
     font-family: Roboto;
