--- a/src/panel-control/PanelControl.module.css
+++ b/src/panel-control/PanelControl.module.css
@@ -46,8 +46,8 @@ main {
     margin: 0;
     text-align: start;
     line-height: 64px;
-    
 }
+
 .n1{
     color: #BDBDBD;
     font-style: normal;
@@ -59,7 +59,7 @@ main {
 
 .Receta {
     color: #D9D9D9;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 64px;
     font-style: normal;
     font-weight: 700;
@@ -71,13 +71,21 @@ main {
     border: 1px solid green;
     padding: 2px;
     display: grid;
+    padding-bottom: 70px;
     grid-template-columns: repeat(
-        auto-fiLL,
+        auto-fit,
         minmax(474px, 1fr)
-    );
-    gap: 20px;
-    
+        );
+        gap: 20px;
 }
+
+@media (width > 1300px) {
+    .boxDataTime {
+        grid-template-columns: 474px 697px;
+        gap: 20px;
+    }
+}
+
 
 
 .dataTime {
@@ -86,18 +94,41 @@ main {
     border-radius: 15px;
     padding: 22px;
 }
+.dataTie:first-child {
+
+}
+.dataTime:nth-child(2) {
+
+}
+.dataTime:nth-child(3) {
+
+}
+
+
 .titleElement {
     color: #D9D9D9;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 24px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    margin-top: 0px;
-    margin-bottom: 42px;
+    margin: 0px;
+    
+}
+.subTitleElement {
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    margin: 0px;
+    margin-top: 5px;
+    border: 1 solid red;
+    
+    color: #EF8225;
 }
 
+
 .ElementSensor {
+    margin-top: 30px;
     border: 1px solid yellow;
     display: grid;
     grid-template-columns: repeat(
@@ -105,6 +136,8 @@ main {
         minmax(200px, 1fr)
     );
     gap: 15px;
-    max-width: 420px;
-
+    max-width: 420px; 
+}
+.ElementSecond{
+    max-width: 630px;
 }
