--- a/src/panel-graficos/PanelGraficos.module.css
+++ b/src/panel-graficos/PanelGraficos.module.css
@@ -10,9 +10,9 @@
     border: 1px solid #434651;
     background-color: black;
     border-radius: 16px;
-    padding: 24px 20px;
+    padding: 32px 40px;
     height: auto;
-    min-height: 484px;
+    min-height: 400px;
     max-width: 745px;
 }
 .c_title {
@@ -20,7 +20,6 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    margin-bottom: 20px;
 }
 .title {
     font-family: "Roboto";
@@ -29,4 +28,42 @@
     font-size: 28px;
     font-weight: 600;
     line-height: normal;
+    margin: 0;
+}
+
+.list_option_temp {
+    border: 1px solid #434651;
+    border-radius: 6px;
+    padding: 0 5px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    max-width: 450px;
+    gap: 5px;
+}
+.list_button {
+    border-radius: 6px;
+    background-color: #000;
+    padding:0px 11px;
+    margin:5px 0px;
+    border: none;
+    cursor: pointer;
+    height: 34px;
+    transition: all 0.7ms;
+}
+.isActiveButton {
+    background-color: #2a2e39 !important;
+    font-weight: bold;
+}
+
+.list_button:hover {
+    background-color: #2a2e39;
+    color: white;
+}
+
+.list_option_temp li {
+    color: #d1d4dc;
+    list-style: none;
+    font-family: "Roboto", "Helvetica Neue";
+    text-align: center;
+    font-size: 16px;
 }
