--- a/src/panel-graficos/PanelGraficos.module.css
+++ b/src/panel-graficos/PanelGraficos.module.css
@@ -67,3 +67,9 @@
     text-align: center;
     font-size: 16px;
 }
+
+.c_chartSeries {
+    border: 1px solid #434651;
+    min-height: 400px;
+    position: relative;
+}
