--- a/src/panel-graficos/PanelGraficos.module.css
+++ b/src/panel-graficos/PanelGraficos.module.css
@@ -5,6 +5,9 @@
     padding-left: 116px;
     padding-right: 116px;
     padding-top: 40px;
+    
+}
+.container_chart {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
