--- a/src/panel-control/productividad/Productividad.module.css
+++ b/src/panel-control/productividad/Productividad.module.css
@@ -1,13 +1,12 @@
 .box_component {
-    border: 1px solid red;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
+    display: flex;
+    gap: 20px;
+    padding-bottom: 70px;
 }
 
 .title , .sub_title {
     font-family: "Roboto";
-    font-weight: bold;
+    font-weight:lighter;
     color: #D9D9D9;
     margin: 0;
     font-size: 16px;
@@ -15,6 +14,7 @@
 .title {
     font-size: 24px;
     margin-bottom: 1rem;
+    font-weight: bold;
 }
 
 .prod_container {
@@ -72,26 +72,103 @@
     border-radius: 4px;
     transition: width 100ms ease;
 }
-.progress_bar {
-    
-}
-.list_receta_container {
 
-}
+
 .list_recetas {
-    border: 1px solid yellow;
-    height: 1.5rem;
+    height: 1.3rem;
     display: flex;
     gap: 2px;
+    border: 1px solid #3D3D3D;
+    border-radius: 6px;
 }
 .recetas {
-    border: 1px solid red;
     display: inline-block;
     height: 95%;
+    
 }
 .box_list_receta {
     display: grid;
     grid-template-columns: 90% 10%;
     gap: 2px;
     width: 100%;
+}
+.box_list_name_receta {
+    display: flex;
+}
+.list_name_receta {
+    margin: 10px 0;
+    color: #D9D9D9;
+    display: flex;
+    
+}
+.name_receta {
+    padding: 0 14px 0 4px;
+    font-family: "Roboto", "Helvetica Neue", Helvetica, Arial;
+    text-overflow: ellipsis;
+    font-size: 14px;
+}
+.box_results_production {
+    display: flex;
+    gap: 20px;
+}
+.box_title_productividad {
+    color: #D9D9D9;
+}
+.box_title {
+    display: flex;
+}
+.icon_ciclo {
+    width: 40px;
+    margin: 0px;
+    margin-top: 45px;
+    margin-left: 10px;
+}
+.title_production {
+    font-family: "Roboto", "Helvetica Neue",;
+    color: #D9D9D9;
+    font-weight: bold;
+    font-size: 90px;
+    margin: 0px;
+}
+.sub_title_production {
+    margin: 0;
+    font-family: "Roboto", "Helvetica Ne";
+    font-size: 24px;
+    color: #D9D9D9;
+}
+
+.prod_resumen_equipo {
+    width: 30%;
+    padding: 22px;
+    background-color: #131313;
+    border-radius: 15px;
+}
+.date_picker {
+    background-color: #131313;
+    border: 1px solid #3D3D3D;
+    color: #D9D9D9;
+    align-items: center;
+    border-radius: 6px;
+    padding-left: 30px !important;
+}
+.date_picker:focus {
+    border: 1px solid red;
+    outline: none;
+}
+.button_component {
+    background-color: #E82A31;
+    margin: 20px 0;
+    width: 100%;
+    height: 35px;
+    border-radius: 10px;
+    color: #D9D9D9;
+    border: none;
+    font-size: 22px;
+    cursor:pointer;
+
+}
+.box_date {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
 }
