--- a/src/panel-control/productividad/Productividad.module.css
+++ b/src/panel-control/productividad/Productividad.module.css
@@ -24,7 +24,6 @@
 }
 
 .progress_bar_item {
-    border: 1px solid tomato;
     margin-bottom: 1rem;
     color: #D9D9D9;
     font-family: "Roboto";
@@ -48,7 +47,7 @@
     font-weight: 400;
     color: #D9D9D9;
     display: block;
-    border: 1px solid blue;
+    margin-left: 10px;
 }
 
 .item_bar {
@@ -57,7 +56,7 @@
     width: 100%;
     background-color: #000;
     border-radius: 4px;
-    border: 1px solid greenyellow;
+    border: 1px solid #3D3D3D;
 }
 
 .progress {
@@ -78,13 +77,11 @@
     height: 1.3rem;
     display: flex;
     gap: 2px;
-    border: 1px solid #3D3D3D;
     border-radius: 6px;
 }
 .recetas {
     display: inline-block;
     height: 95%;
-    
 }
 .box_list_receta {
     display: grid;
