--- a/src/panel-control/productividad/Productividad.module.css
+++ b/src/panel-control/productividad/Productividad.module.css
@@ -110,7 +110,7 @@
 }
 .name_receta {
     padding: 0 14px 0 4px;
-    font-family: "Roboto", "Helvetica Neue", Helvetica, Arial;
+    font-family: "Roboto";
     text-overflow: ellipsis;
     font-size: 14px;
 }
@@ -131,7 +131,7 @@
     margin-left: 10px;
 }
 .title_production {
-    font-family: "Roboto", "Helvetica Neue",;
+    font-family: "Roboto";
     color: #D9D9D9;
     font-weight: bold;
     font-size: 90px;
@@ -139,7 +139,7 @@
 }
 .sub_title_production {
     margin: 0;
-    font-family: "Roboto", "Helvetica Ne";
+    font-family: "Roboto";
     font-size: 24px;
     color: #D9D9D9;
 }
@@ -160,6 +160,7 @@
 .date_picker:focus {
     border: 1px solid red;
     outline: none;
+
 }
 .button_component {
     background-color: #E82A31;
@@ -181,3 +182,4 @@
         );
     gap: 10px;
 }
+
