--- a/src/panel-graficos/PanelGraficos.module.css
+++ b/src/panel-graficos/PanelGraficos.module.css
@@ -100,21 +100,41 @@
 .form_title {
     color: #d1d4dc;
     list-style: none;
-    font-family: "Roboto", "Helvetica Neue";
+    font-family: "Roboto";
     margin: 2px 0;
     font-size: 14px;
     grid-column-start: span 2;
 }
+.form_input {
+    position: relative;
+    border: 1px solid red;
+    min-width: 150px;
+    align-items: center;
+}
+.form_input_one {
+    position: absolute;
+    z-index: 5;
+}
+
 .form_input_one, .form_input_two  {
     border: 1px solid #434651;
     background-color: #000;
     border-radius: 6px;
     color: #d1d4dc;
-    height: 30px;
+    height: 27px;
+    padding-left: 10px;
+    width: 100%;
 }
-.form_input_one::-webkit-calendar-picker-indicator {
+.icon_calender {
     position: absolute;
+    z-index: 9;
+    overflow: hidden;
+    top: 0;
+    right: 0;
     color: #d1d4dc;
+    border: 1px solid yellow;
+    padding-top: 2px;
+    cursor: pointer;
 }
 
 .list_button_component{
