--- a/src/charts/title/Title.module.css
+++ b/src/charts/title/Title.module.css
@@ -16,11 +16,30 @@
     font-family: 'Roboto', sans-serif;
     font-size: 64px;
     font-style: normal;
-    
     line-height: 64px;
 }
 .CocinaTitle {
     color: #EF8225;
     font-style: normal;
     font-weight: 700;
+}
+.EnfriadorTitle {
+    color: #33A7FD;
+    font-style: normal;
+    font-weight: 700;
+}
+.Cocina, .Enfriador {
+    font-size: 64px;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    text-align: start;
+    line-height: 64px;
+    font-style: normal;
+    font-weight: lighter;
+}
+.Cocina {
+    color: #EF8225;
+}
+.Enfriador {
+    color: #33A7FD;
 }
