--- a/src/panel-control/cardsComponent/Cards.module.css
+++ b/src/panel-control/cardsComponent/Cards.module.css
@@ -1,22 +1,15 @@
-.dataTime {
+.card_container {
     background: #0B0B0B;
     width: 200px;
     height: 110px;
     position: relative;
 }
-.titleDataTime {
+.card_header {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-
-.test {
-    color: #2962FF;
-    color: rgba(255, 255, 255, 0.01);
-    color: rgba(41, 98, 255, 0.28);
-}
-
-.datos{
+.card_title {
     color: #D9D9D9;
     font-family: Roboto;
     font-size: 12px;
@@ -27,19 +20,19 @@
     top: 10px;
     z-index: 9;
 }
-.boxImagen {
+.card_box_imagen{
     width: 19px;
     height: 16px;
     margin-right: 6px;
     top: 10px;
 }
-.Imagen {
+.imagen {
     width: 100%;
 }
-.dataComponent {
+.card_value_component {
     position: absolute;
+    color: #D9D9D9;
     top: 32px;
-    color: #EF8225;
     font-family: Roboto;
     font-size: 22px;
     font-style: normal;
@@ -51,7 +44,13 @@
     height: 24px;
     z-index: 99;
 }
-.tipoData {
+.card_cocina {
+    color: #EF8225;
+}
+.card_enfriador {
+    color: #33A7FD;
+}
+.card_tipo_dato{
     color: #D9D9D9;
     font-family: Roboto;
     font-size: 22px;
