--- a/src/panel/Panel.module.css
+++ b/src/panel/Panel.module.css
@@ -53,6 +53,21 @@
     height: 765px;
     margin: 0px auto;
 }
+.cardMachine {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 1px;
+    transition: all;
+    border-radius: 0.375rem; 
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.2), transparent);
+}
+.cardMachine:hover {
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1));
+}
 
 .imgEquipo {
     position: absolute;
