--- a/src/charts/title/Title.module.css
+++ b/src/charts/title/Title.module.css
@@ -14,19 +14,30 @@
 .Receta {
     color: #D9D9D9;
     font-family: 'Roboto', sans-serif;
+    font-weight: lighter;
     font-size: 64px;
     font-style: normal;
     line-height: 64px;
 }
+.RecetaPanel {
+    color: #D9D9D9;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    font-size: 64px;
+    font-style: normal;
+    line-height: 64px;
+}
+
+
 .CocinaTitle {
     color: #EF8225;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 600;
 }
 .EnfriadorTitle {
     color: #33A7FD;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 600;
 }
 .Cocina, .Enfriador {
     font-size: 64px;
