--- a/src/navbar/navEquipos/NavEquipos.module.css
+++ b/src/navbar/navEquipos/NavEquipos.module.css
@@ -26,6 +26,7 @@
     box-shadow: 0 -5px 20px 5px rgba(255, 255, 255, 0.4);
     width: 200px;
     transition: all .3s ease;
+    border-radius: 2.7px;
 }
 .BoxInactive {
     height:6px;
