--- a/src/panel/Panel.module.css
+++ b/src/panel/Panel.module.css
@@ -32,6 +32,7 @@
     padding-left: 116px;
     padding-right: 116px;
     */
+    min-height: 400px;
     display: grid;
     grid-template-columns: repeat(
         auto-fit,
