--- a/src/panel-control/PanelControl.module.css
+++ b/src/panel-control/PanelControl.module.css
@@ -71,14 +71,14 @@ main {
     padding-bottom: 70px;
     grid-template-columns: repeat(
         auto-fit,
-        minmax(474px, 1fr)
+        minmax(1fr, 474px)
         );
         gap: 20px;
 }
 
 @media (width > 1300px) {
     .boxDataTime {
-        grid-template-columns: 474px 697px;
+        grid-template-columns:697px 474px;
         gap: 20px;
     }
 }
@@ -90,23 +90,15 @@ main {
     border-radius: 15px;
     padding: 22px;
 }
+.dateTimeSectorIO {
+    max-height: 165px;
+}
 
 .card_component_electrique {
     background: #131313;
     border-radius: 15px;
     padding: 22px;
 }
-
-.dataTie:first-child {
-
-}
-.dataTime:nth-child(2) {
-
-}
-.dataTime:nth-child(3) {
-
-}
-
 
 .titleElement {
     color: #D9D9D9;
@@ -116,7 +108,6 @@ main {
     font-weight: 600;
     line-height: normal;
     margin: 0px;
-    
 }
 .subTitleElement {
     font-family: 'Roboto', sans-serif;
@@ -132,7 +123,6 @@ main {
 .card_enfriador {
     color: #33A7FD;
 }
-
 
 .ElementSensor {
     margin-top: 30px;
