--- a/src/panel-control/productividad/Productividad.module.css
+++ b/src/panel-control/productividad/Productividad.module.css
@@ -79,11 +79,11 @@
     width: 0;
     height: 1.5rem;
     margin: 0;
-    background-color: #3666CC;
+    background-color: #3c8a64;
+    background-image: linear-gradient(61deg, #3c8a64 0%, #00d640 100%);
     border-radius: 4px;
     transition: width 100ms ease;
 }
-
 
 .list_recetas {
     height: 1.3rem;
@@ -101,18 +101,19 @@
     height: 1.5rem;
     width: 100%;
     background-color: #000;
+    background-image: none;
     border-radius: 4px;
     border: 1px solid #3D3D3D;
 }
 .bar_op {
     display: inline-block;
     height: 95%;
-    border: 1px solid green;
+    background-color: #007bff;
 }
 .bar_pre {
     display: inline-block;
     height: 95%;
-    border: 1px solid yellow;
+    background-color: #ff7f0e; 
 }
 
 
