--- a/src/panel-graficos/PanelGraficos.module.css
+++ b/src/panel-graficos/PanelGraficos.module.css
@@ -3,9 +3,22 @@
     padding: 40px 116px;
 }
 .container_chart {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    flex-direction: column;
     gap: 20px;
+}
+.c_chart_header {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+    margin: 30px 0;
+}
+.title_chart_historico {
+    color: #D9D9D9;
+    font-family: "Roboto";
+    font-weight: 500;
+    font-size: 40px;
+    margin: 0;
 }
 
 .c_chart {
@@ -13,20 +26,38 @@
     background-color: black;
     border-radius: 16px;
     padding: 32px 40px;
-    max-height: 410px;
-    max-width: 745px;
+    max-height: 360px;
+}
+.c_chart_width {
+    height: 510px;
+    max-height: 510px;
 }
 .c_chart_panel {
     border: none;
     background-color: #131313;
     padding: 22px;
 }
-
-.c_title {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    width: 100%;
+.c_chart_component {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+.c_container_model {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    border-bottom: 1px solid tomato;
+    border: none;
+    border-bottom: 1px solid #fff;
+    background: none;
+    cursor: pointer;
+}
+.table_header {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 10px;
+    border:1px solid #434651;
+    padding: 0px 10px;
+    border-radius: 5px ;
 }
 .title {
     font-family: "Roboto";
@@ -36,6 +67,12 @@
     font-weight: 600;
     line-height: normal;
     margin: 0;
+}
+.title_model {
+    color: #131313;
+    font-family: 'Roboto', sans-serif;
+    margin: 10px 0;
+    text-align: center;
 }
 .title_panel {
     color: #D9D9D9;
@@ -110,11 +147,12 @@
 /*Component CHART unit*/
 .list_option_component {
     border-radius: 6px;
-    width: 150px;
     padding: 0;
     display: flex;
+    flex-direction: column;
+    gap: 20px;
     width: 100%;
-    justify-content: space-between;
+    margin: 0;
 }
 /*Component FORM NATIVE
 .form_date {
