--- a/src/panel-graficos/PanelGraficos.module.css
+++ b/src/panel-graficos/PanelGraficos.module.css
@@ -65,7 +65,7 @@
 }
 .title {
     font-family: "Roboto";
-    color: #fff;
+    color: #D9D9D9;
     text-align: start;
     font-size: 28px;
     font-weight: 600;
