Title: Disminuir el tamaño del padding y el size

--- a/src/panel-control/PanelControl.module.css
+++ b/src/panel-control/PanelControl.module.css
@@ -27,8 +27,7 @@ main {
 
 .CabeceraPanelControl {
     background-color: #1F1F1F; 
-    padding-left: 116px;
-    padding-right: 116px;
+    padding: 20px 116px;
     
 }
 
