--- a/src/charts/title/Title.module.css
+++ b/src/charts/title/Title.module.css
@@ -1,33 +1,29 @@
 .titleBox {
-    padding-top: 80px;
     width: 100%;
-    margin-bottom: 80px;
+    padding-bottom: 20px;
 }
 .title {
-    font-size: 64px;
+    font-size: 34px;
     font-weight: 400;
     font-family: 'Roboto', sans-serif;
     margin: 0;
     text-align: start;
-    line-height: 64px;
 }
 .Receta {
     color: #D9D9D9;
     font-family: 'Roboto', sans-serif;
     font-weight: lighter;
-    font-size: 64px;
+    font-size: 34px;
     font-style: normal;
-    line-height: 64px;
 }
 .RecetaPanel {
     color: #D9D9D9;
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
-    font-size: 64px;
+    font-size: 34px;
     font-style: normal;
-    line-height: 64px;
+    line-height: 34px;
 }
-
 
 .CocinaTitle {
     color: #EF8225;
@@ -40,11 +36,10 @@
     font-weight: 600;
 }
 .Cocina, .Enfriador {
-    font-size: 64px;
+    font-size: 34px;
     font-family: 'Roboto', sans-serif;
     margin: 0;
     text-align: start;
-    line-height: 64px;
     font-style: normal;
     font-weight: lighter;
 }
